--- a/.github/workflows/docker-image-build-push.yml
+++ b/.github/workflows/docker-image-build-push.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/your-repo-name:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/whale-demo:latest
 
     - name: Logout from Docker Hub
       run: docker logout
