--- a/.github/workflows/docker-image-build-push.yml
+++ b/.github/workflows/docker-image-build-push.yml
@@ -31,3 +31,15 @@ jobs:
 
     - name: Logout from Docker Hub
       run: docker logout
+
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          docker pull ${{ secrets.DOCKER_USERNAME }}/whale-demo:latest
+          docker stop whale-demo || true
+          docker rm whale-demo || true
+          docker run -d --name whale-demo -p 80:80 ${{ secrets.DOCKER_USERNAME }}/whale-demo:latest
